<resources>
    <string name="app_name">Smartgeo</string>
    <string name="hello_world">Hello world!</string>

    <string name="text_intro">Add new problem</string>

    <string name="add_problem">Add Problem</string>
    <string name="add_issue">Add Issue</string>

    <string name="edit_title">Title ...</string>
    <string name="edit_description">Description ...</string>

    <string name="action_settings">Settings</string>

    <string name="button_send">Send</string>
    <string name="button_images">Gallery</string>
    <string name="button_camera_b">Camera</string>
    <string name="button_camera_a">Camera</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_issue">Issues</string>
    <string name="title_activity_problem">Problems</string>
    <string name="title_activity_display_message">Your Post</string>

    <string name="label_address">Address: </string>
</resources>
